<resources>
    <string name="app_name">RSS Reader</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feed_url">Feed url</string>
    <string name="feed">Feed</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="select_link">Select A Link</string>
    <string name="cancel">Cancel</string>
</resources>
